packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_governor_votes_quorum_fraction_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        governor_votes_quorum_fraction: GovernorVotesQuorumFractionComponent::Storage,
    }
    use openzeppelin_governance::governor::extensions::GovernorVotesQuorumFractionComponent;

    component!(
        path: GovernorVotesQuorumFractionComponent,
        storage: governor_votes_quorum_fraction,
        event: GovernorVotesQuorumFractionEvent,
    );

    impl GovernorVotesQuorumFractionInternalImpl =
        GovernorVotesQuorumFractionComponent::InternalImpl<ContractState>;
    impl GovernorVotesQuorumFractionGovernorQuorum =
        GovernorVotesQuorumFractionComponent::GovernorQuorum<ContractState>;
    impl GovernorVotesQuorumFractionGovernorVotes =
        GovernorVotesQuorumFractionComponent::GovernorVotes<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        GovernorVotesQuorumFractionEvent: GovernorVotesQuorumFractionComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

GovernorVotesQuorumFraction

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
