packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_invalid_component.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

====
Error: Invalid component: ERC6000

Allowed components are:
AccessControl, Ownable, Vesting, SRC5, Initializable, Pausable, ReentrancyGuard, ERC20, ERC721, ERC721Enumerable, ERC721Receiver, ERC1155, ERC1155Receiver, ERC2981, Upgradeable, Nonces, Multisig, TimelockController, Votes, TODO:Governor, TODO:GovernorCoreExecution, TODO:GovernorCountingSimple, TODO:GovernorSettings, TODO:GovernorTimelockExecution, TODO:GovernorVotesQuorumFraction, TODO:GovernorVotes
====

AuxData:

None
