packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_multiple_duplicate_components.snap
---
source: src/tests/test_with_components.rs
assertion_line: 1717
expression: result
---
TokenStream:

None

Diagnostics:

====
Error: Components [ERC20, Ownable] are specified multiple times. Each component must only be listed once.
====

AuxData:

None
