packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_multisig_account.snap
---
source: src/tests/test_with_components.rs
expression: result
---
TokenStream:

#[starknet::contract(account)]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub multisig_account: MultisigAccountComponent::Storage,
    }
    #[constructor]
    fn constructor(ref self: ContractState, quorum: u32, signers: Span<felt252>) {
        self.multisig_account.initializer(quorum, signers);
    }
    use openzeppelin_account::MultisigAccountComponent;

    component!(
        path: MultisigAccountComponent, storage: multisig_account, event: MultisigAccountEvent,
    );

    impl MultisigAccountInternalImpl = MultisigAccountComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        MultisigAccountEvent: MultisigAccountComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
