packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_no_body.snap
---
source: src/tests/test_with_components.rs
assertion_line: 593
expression: result
---
TokenStream:

None

Diagnostics:

====
Error: Contract module must have a body.
====

AuxData:

None
