packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_nonces.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        nonces: NoncesComponent::Storage,
    }
    use openzeppelin_utils::nonces::NoncesComponent;

    component!(path: NoncesComponent, storage: nonces, event: NoncesEvent);

    impl NoncesInternalImpl = NoncesComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        NoncesEvent: NoncesComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
