packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_pausable_no_pause_call.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pausable: PausableComponent::Storage,
    }

    #[generate_trait]
    #[abi(per_item)]
    impl ExternalImpl of ExternalTrait {
        #[external(v0)]
        fn unpause(ref self: ContractState) {
            self.pausable.unpause();
        }
    }
    use openzeppelin_security::PausableComponent;

    component!(path: PausableComponent, storage: pausable, event: PausableEvent);

    impl PausableInternalImpl = PausableComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        PausableEvent: PausableComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like either the `self.pausable.pause()` or `self.pausable.unpause()` mechanisms are not implemented in the contract. If
this is intentional, you may consider removing the Pausable component.
====

AuxData:

None
